add and update resource
Attention ! si on recharge la page, le cache est supprimé = on perd les ajouts

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -27,7 +27,7 @@
         <i class="fa fa-caret-down"></i> <!-- This line of code represents an icon for a downward arrow. -->
       </button>
       <div class="dropdown-content">
-        <a [routerLink]="['/admin/resources/create']">add resource</a>
+        <a [routerLink]="['/resources/create']">add resource</a>
         <a href="#">Link 2</a>
         <a href="#">Link 3</a>
         <a href="#">Link 4</a>
