--- a/src/app/resources/resource-list/resource-list.component.html
+++ b/src/app/resources/resource-list/resource-list.component.html
@@ -1,7 +1,7 @@
 <div class="wrapper">
       <div *ngFor="let resource of resources; let i = index" class="box" [ngClass]="boxes[i % boxes.length]?.value">
 
-            <h2 [routerLink]="['/admin/resources', resource.resourceId, 'edit']" #title>{{resource.title}}</h2>
+            <h2 [routerLink]="['/resources', resource.id, 'edit']" #title>{{resource.title}}</h2>
             <p>{{resource.body}}</p>
             <a class="resource-link" href="{{resource.link}}" target="_blank">
                   <img class="resource-img" src="{{resource.imageUrl}}" alt="Image Un">
