Supprimer une ressource
Ajout d'un bouton supprimer dans le formulaire de modif & CSS
Ajout fonctions de suppression

--- a/src/app/resources/resource-edit/resource-edit.component.html
+++ b/src/app/resources/resource-edit/resource-edit.component.html
@@ -49,5 +49,11 @@
     </div>
 
     <input type="submit" value="Envoyer">
+    
+    <div *ngIf="isEditing" class="delete-div">
+      <p class="delete-warning">Supprimer la ressource est irréversible.</p>
+      <button type="button" class="delete-button" (click)="deleteResource()">Supprimer</button>
+    </div>
   </form>
+
 </div>
