--- a/src/app/resources/resource-edit/resource-edit.component.css
+++ b/src/app/resources/resource-edit/resource-edit.component.css
@@ -50,6 +50,37 @@ input[type="submit"]:hover {
   background-color: #0056b3;
 }
 
+.delete-div {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-top: 20px;
+  background-color: rgba(250, 6, 6, 0.432);
+  padding: 10px;
+  border-radius: 5px;
+}
+
+.delete-button {
+  background-color: red;
+  color: #fff;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.delete-button:hover {
+  background-color: #ce0606;
+}
+
+.delete-warning {
+  vertical-align: middle;
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .tags-container {
   display: flex;
   flex-wrap: wrap;
