--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -4,7 +4,15 @@
 	<!--Grid row-->
 	<div class="row">
 		<!--Grid column-->
-		<div class="col-lg-6 col-md-12 mb-4 mb-md-0">
+		<div class="col-lg-3 col-md-12 mb-4 mb-md-0">
+			<h5 class="text-uppercase">ACCESSIBILITY</h5>
+			<p>
+				For the moment the site is not studdied for accessibility, we will check that soon
+			</p>
+		</div>
+		
+		<!--Grid column-->
+		<div class="col-lg-5 col-md-12 mb-4 mb-md-0">
 		<h5 class="text-uppercase">Footer Content</h5>
 
 		<p>
@@ -16,7 +24,7 @@
 		<!--Grid column-->
 
 		<!--Grid column-->
-		<div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+		<div class="col-lg-2 col-md-6 mb-4 mb-md-0">
 		<h5 class="text-uppercase">Links</h5>
 
 		<ul class="list-unstyled mb-0">
@@ -37,7 +45,7 @@
 		<!--Grid column-->
 
 		<!--Grid column-->
-		<div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+		<div class="col-lg-2 col-md-6 mb-4 mb-md-0">
 		<h5 class="text-uppercase mb-0">People</h5>
 
 		<ul class="list-unstyled">
