--- a/src/app/resources/resource-list/resource-list.component.html
+++ b/src/app/resources/resource-list/resource-list.component.html
@@ -1,3 +1,7 @@
+<div>
+      <h2 style="text-align: center;">{{section|uppercase}}</h2>
+</div>
+
 <div class="wrapper">
       <div *ngFor="let resource of resources; let i = index" class="box" [ngClass]="boxes[i % boxes.length]?.value">
 
@@ -9,3 +13,4 @@
 
       </div>
 </div>
+
