filtered not ok

--- a/src/app/resources/resource-list/resource-list.component.html
+++ b/src/app/resources/resource-list/resource-list.component.html
@@ -1,5 +1,5 @@
 <div>
-      <h2 style="text-align: center;">{{section|uppercase}}</h2>
+      <h2 style="text-align: center;">{{category|uppercase}}</h2>
 </div>
 
 <div class="wrapper">
@@ -13,4 +13,3 @@
 
       </div>
 </div>
-
