auth ok : nécessaire d'améliorer l'apparence c'est MOCHE
En gros :
AuthGuard monte la garde pour les pages que l'on réserve aux gens connectés

Ils appellent une fonction qui vérifie si on est connectés :
- oui : alors ils nous laissent passer vers la page
- non : alors nous redirigent vers la page de connexion

j'ai mis dans le header des boutons qui apparaissent en fonction de si je suis connectée ou pas (log in ou ((déconnexion et ajout de ressources))

TO DO : améliorer l'interface pour modifier une ressource, interface de connexion et boutons header

--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -7,6 +7,11 @@
     background-color: inherit;
     font-family: inherit;
     margin: 0;
+    background-color: #f8f9fa;
+  }
+
+  .container-fluid{
+    padding-right: 15%;
   }
   
   .navbar a:hover, .dropdown:hover .dropbtn {
@@ -38,4 +43,9 @@
   
   .dropdown:hover .dropdown-content {
     display: block;
+  }
+
+
+  .admin {
+    padding-right: 5%;
   }
