--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -63,12 +63,16 @@
         <a href="#">Link 6</a>
       </div>
     </div>
-
-    <form class="d-flex input-group w-auto">
-      <input type="search" class="form-control" placeholder="Type query" aria-label="Search" />
-      <button data-mdb-ripple-init class="btn btn-outline-primary" type="button" data-mdb-ripple-color="dark">
-        Recherche
-      </button>
-    </form>
+  </div>
+  <div class = 'admin'>
+    <a class="a-admin" [routerLink]="['login']" *ngIf="!(isLoggedIn$ | async)">
+      <img src="assets/default.png" height="40" alt="Log-in" loading="eager" />
+    </a>
+    <a class="a-admin" [routerLink]="['resources/create']" *ngIf="(isLoggedIn$ | async)">
+      <img src="assets/add.png" height="40" alt="Log-out" loading="eager" />
+    </a>
+    <button *ngIf="(isLoggedIn$ | async)" (click)="logout()">
+      <img src="assets/disconnect.png" height="40" alt="Log-out" loading="eager" />
+    </button>
   </div>
 </nav>
