align icones and connexion css

--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -1,14 +1,62 @@
 /* login.component.css */
+
 .login-container {
-    width: 300px;
-    margin: 0 auto;
-  }
-  
-  .form-group {
-    margin-bottom: 10px;
-  }
-  
-  .error-message {
-    color: red;
-  }
-  
+  margin: 20px auto;
+  max-width: 400px;
+  padding: 20px;
+  border-radius: 10px;
+  background-color: #ffd166;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+}
+
+.login-container h2 {
+  text-align: center;
+  font-family: cursive;
+  font-weight: bold;
+  font-size: 30px;
+  margin-bottom: 20px;
+}
+
+.error-message {
+  color: red;
+  text-align: center;
+  margin-bottom: 10px;
+}
+
+form {
+  display: grid;
+  grid-gap: 15px;
+}
+
+.form-group {
+  display: grid;
+  margin-bottom: 10px;
+}
+
+label {
+  font-family: cursive;
+  font-weight: bold;
+}
+
+input[type="text"],
+input[type="password"] {
+  padding: 10px;
+  border-radius: 5px;
+  font-family: cursive;
+}
+
+button {
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  border: 2px solid #0a495f;
+  background-color: #118ab2;
+  color: white;
+  font-family: cursive;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+button:hover {
+  background-color: #0a495f;
+}
