--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -1,51 +1,58 @@
-  .dropdown .dropbtn {
-    font-size: 16px;  
-    border: none;
-    outline: none;
-    color: black;
-    padding: 14px 16px;
-    background-color: inherit;
-    font-family: inherit;
-    margin: 0;
-    background-color: #f8f9fa;
-  }
+.dropdown .dropbtn {
+  font-size: 16px;
+  border: none;
+  outline: none;
+  color: black;
+  padding: 14px 16px;
+  background-color: inherit;
+  font-family: inherit;
+  margin: 0;
+  background-color: #f8f9fa;
+}
 
-  .container-fluid{
-    padding-right: 15%;
-  }
-  
-  .navbar a:hover, .dropdown:hover .dropbtn {
-    background-color: #e9ebec;
-  }
-  
-  .dropdown-content {
-    columns: 2;
-    display: none;
-    position: absolute;
-    background-color: white;
-    min-width: 260px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
-  }
-  
-  .dropdown-content a {
-    float: none;
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-    text-align: left;
-  }
-  
-  .dropdown-content a:hover {
-    background-color: #e9ebec;
-  }
-  
-  .dropdown:hover .dropdown-content {
-    display: block;
-  }
+.container-fluid {
+  padding-right: 15%;
+}
 
+.navbar a:hover,
+.dropdown:hover .dropbtn {
+  background-color: #e9ebec;
+}
 
-  .admin {
-    padding-right: 5%;
-  }
+.dropdown-content {
+  columns: 2;
+  display: none;
+  position: absolute;
+  background-color: white;
+  min-width: 260px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  float: none;
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+}
+
+.dropdown-content a:hover {
+  background-color: #e9ebec;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+.admin {
+  padding-right: 5%;
+  padding-left: 5%;
+  display: flex;
+  align-items: center;
+}
+.admin a:not(:last-child),
+.admin button:not(:last-child) {
+  margin-right: 20%; /* Augmente l'espace entre les éléments */
+}
