--- a/src/app/resources/resource-list/resource-list.component.html
+++ b/src/app/resources/resource-list/resource-list.component.html
@@ -7,7 +7,7 @@
 
             <h2 [routerLink]="['/resources', resource.id, 'edit']" #title>{{resource.title}}</h2>
             <p>{{resource.body}}</p>
-            <a class="resource-link" href="{{resource.link}}" target="_blank">
+            <a class="wrapper-img" href="{{resource.link}}" target="_blank">
                   <img class="resource-img" src="{{resource.imageUrl}}" alt="Image Un">
             </a>
 
