--- a/src/app/resources/resource-list/resource-list.component.css
+++ b/src/app/resources/resource-list/resource-list.component.css
@@ -7,10 +7,13 @@
   padding: 5% 10%;
 }
 
+.box-link {
+  text-decoration: none; /* Supprime le soulignement du lien */
+  color: inherit; /* Utilisez la couleur par défaut du texte */
+}
 .box {
   border-radius: 30px;
 }
-
 .wrapper-img {
   margin-left: 10px;
   margin-right: 10px;
@@ -234,6 +237,74 @@ p {
     margin-right: 10%;
     margin-left: 10%;
   }
+
+  /* Styles spécifiques pour chaque boîte */
+
+  .one,
+  .two,
+  .three,
+  .four,
+  .five,
+  .six,
+  .seven,
+  .eight {
+    grid-column: span 1;
+    grid-row: span 1;
+    display: grid;
+    grid-template-rows: auto;
+  }
+
+  .one,
+  .three,
+  .five,
+  .seven {
+    grid-template-columns: 70% 30%;
+  }
+  .two,
+  .four,
+  .six,
+  .seven {
+    grid-template-columns: 30% 70%;
+  }
+  .one h2,
+  .three h2,
+  .five h2,
+  .seven h2 {
+    grid-row: 1;
+    grid-column: 1;
+  }
+  .two h2,
+  .four h2,
+  .six h2,
+  .eight h2 {
+    grid-row: 1;
+    grid-column: 2;
+  }
+  .one p,
+  .two p,
+  .three p,
+  .four p,
+  .five p,
+  .six p,
+  .seven p,
+  .eight p {
+    grid-row: 2;
+    grid-column: span 2;
+  }
+  .one img,
+  .three img,
+  .five img,
+  .seven img {
+    grid-row: 1;
+    grid-column: 2;
+  }
+  .two img,
+  .four img,
+  .six img,
+  .eight img {
+    grid-row: 1;
+    grid-column: 1;
+  }
 }
 
 /*
@@ -251,18 +322,18 @@ p {
   p {
     font-family: cursive;
     text-align: justify;
-    margin-left: 10%; /* Ajustez cette valeur selon vos besoins */
-    margin-right: 10%; /* Ajustez cette valeur selon vos besoins */
+    margin-left: 10%;
+    margin-right: 10%;
     margin-top: 2%;
     display: -webkit-box;
     overflow: hidden;
     -webkit-line-clamp: 8;
     -webkit-box-orient: vertical;
-    line-height: 1.2em; /* Hauteur de ligne standard */
-    max-height: 11em; /* 5 lignes de texte, plus une marge pour les points de suspension */
+    line-height: 1.2em;
+    max-height: 11em;
   }
 
-  /* Styles spécifiques pour chaque boîte */
+  /* Specific style for each box */
   .one,
   .two,
   .three,
